--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -7,12 +7,18 @@
     color: #fff;
 }
 
-.health-navbar-menu {
+.health-navbar-menu, .health-navbar-menu-drawer {
     display: none;
 }
 
+.lang-form span {
+    font-size: 0.83em;
+}
+
 @media (max-width:720px) {
-    .health-navbar-menu {
+    .health-navbar-menu, .health-navbar-menu-drawer {
         display: block;
     }
+
+
 }
