Saved v0.0.13: footer lang

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -6,6 +6,14 @@
     height: 65vh !important;
 }
 
+.home-content-subcards {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+
 .home-title {
     color: #fff;
     text-align: center;
@@ -15,6 +23,12 @@
     font-size: 50px;
 }
 
+.home-card-subtitle {
+    color: #626265;
+    font-weight: 100;
+    font-size: 20px;
+}
+
 .home-contact-button {
     z-index: 11;
     width: 320px;
@@ -22,6 +36,29 @@
     margin-top: 50px !important;
 }
 
+.home-subcards-button {
+    z-index: 11;
+    width: 320px;
+    border-radius: 50px !important;
+    margin-top: 30px !important;
+    margin-bottom: 75px !important;
+    box-shadow: 0 4px 8px 0 #626265 !important;
+}
+
+.home-content-h3 {
+    color: #626265;
+    font-size: 30px;
+    margin: 12px 0;
+
+}
+
+.home-content-text {
+    font-size: 14px;
+    text-align: center;
+    color: #626265;
+    line-height: 1.5;
+    width: 324px;
+}
 
 /**************************** Media 1 ****************************/
 @media only screen and (min-width: 769px) and (max-width: 1024px) {
