--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -4,3 +4,22 @@
     margin-top: 250px;
     flex-wrap: wrap;
 }
+
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+    .cards-container {
+        margin-top: 230px;
+    }
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1200px) {
+    .cards-container {
+        margin-top: 380px;
+    }
+}
+
+@media only screen and (min-width: 1201px) {
+    .cards-container {
+        flex-wrap: nowrap;
+        margin-top: 200px !important;
+    }
+}
