--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* height: 65vh !important; */
     margin-top: -1350px;
     z-index: 11;
 }
@@ -20,7 +19,6 @@
     color: #fff;
     text-align: center;
     z-index: 11;
-    /* margin-top: -1580px; */
     width: 360px;
     font-size: 50px;
 }
@@ -29,6 +27,19 @@
     color: #626265;
     font-weight: 100;
     font-size: 20px;
+}
+
+.home-dot-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.home-content-subcards-img {
+    height: 215px;
+    width: 324px;
 }
 
 .home-contact-button {
@@ -67,6 +78,12 @@
         font-size: 60px;
         width: 500px;
     }
+
+    .home-card-subtitle {
+        font-size: 30px;
+    }
+
+
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1919px) {
@@ -74,11 +91,73 @@
         font-size: 65px;
         width: 600px;
     }
+
+    .home-card-subtitle {
+        font-size: 40px;
+    }
+
+    .home-subcards-button {
+        width: 200px;
+        font-size: 30px;
+    }
+
+    .home-dot-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: flex-start;
+
+    }
+
+    .home-content-subcards {
+        margin: 32px;
+    }
+
+    .home-content-subcards-img {
+        height: 365px;
+        width: 524px;
+    }
+
+    .home-content-h3 {
+        font-size: 35px;
+        font-weight: 900;
+    }
 }
 
 @media only screen and (min-width: 1920px) {
     .home-title {
         font-size: 70px;
         width: 700px;
+    }
+
+    .home-card-subtitle {
+        font-size: 40px;
+    }
+
+    .home-subcards-button {
+        width: 250px;
+        font-size: 30px;
+    }
+
+    .home-content-subcards-img {
+        height: 415px;
+        width: 624px;
+    }
+
+    .home-subcards-button {
+        width: 200px;
+        font-size: 30px;
+    }
+
+    .home-dot-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: flex-start;
+
+    }
+
+    .home-content-subcards {
+        margin: 32px;
     }
 }
