--- a/src/components/BackgroundTop/BackgroundTop.css
+++ b/src/components/BackgroundTop/BackgroundTop.css
@@ -1,59 +1,76 @@
-.gradient-presentation {
-    height: 600px;
-    width: 100%;
+/* BackgroundTop.css */
+.background-wrapper {
     position: relative;
-    margin-top: -110px;
-    z-index: 10;
-    opacity: .7;
-    border-radius: 25% 25% 35% 35% / 0% 0% 7% 7%;
-    background: rgb(0, 22, 57);
-    background: linear-gradient(180deg, rgba(0, 22, 57, 1) 0%, rgba(0, 22, 57, 0.6012998949579832) 13%, rgba(0, 22, 57, 0) 100%);
-    ;
+    width: 100%;
+    overflow: hidden;
 }
 
-
 .background-container {
-    width: 100%;
-    flex-grow: 1;
     position: relative;
-    top: -600px;
-    z-index: 1;
+    width: 100%;
+    height: auto;
 }
 
 .background-container-img {
     width: 100%;
+    height: auto;
+    display: block;
     object-fit: cover;
     border-radius: 25% 25% 50% 50% / 0% 0% 7% 7%;
 }
 
-.title-presentation {
-    position: relative;
-    margin-top: -800px;
-    text-align: center;
-    color: #fff;
-    font-size: 55px;
-    z-index: 40;
+.gradient-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(180deg,
+            rgba(0, 22, 57, 0.9) 0%,
+            rgba(0, 22, 57, 0.6) 50%,
+            rgba(0, 22, 57, 0.3) 100%);
+    border-radius: 25% 25% 50% 50% / 0% 0% 7% 7%;
 }
 
+.title-presentation {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    text-align: center;
+    z-index: 2;
+    width: 100%;
+    font-size: 55px;
+}
 
+/* Media Queries */
+@media only screen and (max-width: 480px) {
+    .title-presentation {
+        font-size: 40px;
+    }
+}
 
-/* Estilos para móviles pequeños */
-@media only screen and (max-width: 480px) {}
+@media only screen and (min-width: 481px) and (max-width: 767px) {
+    .title-presentation {
+        font-size: 60px;
+    }
+}
 
-/* Estilos para móviles en orientación horizontal */
-@media only screen and (min-width: 481px) and (max-width: 767px) {}
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+    .title-presentation {
+        font-size: 75px;
+    }
+}
 
-/* Estilos para tabletas en orientación vertical */
-@media only screen and (min-width: 481px) and (max-width: 768px) {}
+@media only screen and (min-width: 1025px) and (max-width: 1200px) {
+    .title-presentation {
+        font-size: 90px;
+    }
+}
 
-/* Estilos para tabletas en orientación horizontal o pantallas pequeñas */
-@media only screen and (min-width: 769px) and (max-width: 1024px) {}
-
-/* Estilos para pantallas de escritorio medianas */
-@media only screen and (min-width: 1025px) and (max-width: 1200px) {}
-
-/* Estilos para pantallas de escritorio grandes */
-@media only screen and (min-width: 1201px) and (max-width: 1500px) {}
-
-/* Estilos para pantallas de escritorio grandes */
-@media only screen and (min-width: 1501px) {}
+@media only screen and (min-width: 1201px) {
+    .title-presentation {
+        font-size: 105px;
+    }
+}
