--- a/src/components/BreadCrumbs/CustomBreadCrumbs.css
+++ b/src/components/BreadCrumbs/CustomBreadCrumbs.css
@@ -1,6 +1,6 @@
 .container-breadcrumbs {
     position: relative;
-    z-index: 100;
+    /* z-index: 70; */
     margin: auto;
 }
 
@@ -32,44 +32,32 @@
 @media only screen and (min-width: 769px) and (max-width: 1024px) {
     .container-breadcrumbs {
         width: 80%;
-        margin-top: -600px;
+        margin-top: -450px;
     }
 }
 
 /* Estilos para pantallas de escritorio medianas */
 @media only screen and (min-width: 1025px) and (max-width: 1200px) {
     .container-breadcrumbs {
-        width: 90%;
-        margin-top: -1000px;
+        width: 80%;
+        margin-top: -450px;
     }
 }
 
 /* Estilos para pantallas de escritorio grandes */
 @media only screen and (min-width: 1201px) and (max-width: 1500px) {
     .container-breadcrumbs {
-        width: 90%;
-        margin-top: -1900px;
+        width: 70%;
+        margin-top: -450px;
     }
 }
 
 /* Estilos para pantallas de escritorio grandes */
-@media only screen and (min-width: 1501px) and (max-width: 1700px) {
+@media only screen and (min-width: 1501px) {
     .container-breadcrumbs {
         width: 64%;
         margin: auto;
-        margin-top: -1200px;
-    }
-
-    .breadcrumbs-text {
-        font-size: 18px !important;
-    }
-}
-
-@media only screen and (min-width: 1701px) {
-    .container-breadcrumbs {
-        width: 60%;
-        margin: auto;
-        margin-top: -1600px;
+        margin-top: -450px;
     }
 
     .breadcrumbs-text {
